# ApplicantStatsProject

./: .$architecture.drawio.bkp  .clang-format  .gitignore  ApplicantStatsProject.pro  ApplicantStatsProject.pro.user.12f43ff  ApplicantStatsProject.pro.user.3a60966  CMakeLists.txt  CustomButton.qml  RightBar.qml  applicant.cpp  applicant.h  architecture.drawio  columnsNames.txt  facultycell.cpp  facultycell.h  facultypool.cpp  facultypool.h  kcp.txt  magichat.cpp  magichat.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  namespaces.h  resources.qrc  src.qrc  tableparser.cpp  tableparser.h  tableparserbachelor.cpp  tableparserbachelor.h  tableparsermaster.cpp  tableparsermaster.h  xlsx.h  кцп_бакалавры.txt  кцп_магистры.txt
Docs/: Applicant Diagram.drawio
applicantandfaculthy/: applicant.cpp  applicant.h  facultycell.cpp  facultycell.h
config/: KCP.xlsx
legacy/gui_widgets/: main-widget.cpp  main-widget.ui  window-manager.cpp  window-manager.h
programInfo/: KCP.xlsx  columnsNames.txt  columnsNames.xlsx
settings/: columnsNames.txt  columnsNames.xlsx  kcpBachelors.txt  kcpMasters.txt
src/: applicant.cpp  applicant.h  cachesystem.cpp  cachesystem.h  facultycell.cpp  facultycell.h  magichat.cpp  magichat.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml-helper.h  support-system.cpp  support-system.h  supportsystem.cpp  supportsystem.h  tablemanager.cpp  tablemanager.h  tableparserbachelor.cpp  tableparserbachelor.h  tableparsermaster.cpp  tableparsermaster.h  xlsx.h
src/QXlsx/lib/: moc_xlsxdocument.cpp
src/applicants-faculthy-data/: applicant.cpp  faculthy-direction.cpp
src/applicants-faculty-data/: applicant.cpp  applicant.h  faculty-direction.cpp  faculty-direction.h  priority-info.cpp  priority-info.h  stats.cpp  stats.h  table-parser-bachelor.cpp  table-parser-bachelor.h
src/data-processing/: cache-manager.cpp  cache-manager.h  data-to-stats-converter.cpp  data-to-stats-converter.h  directions-to-stats-converter.cpp  directions-to-stats-converter.h  magic-hat.cpp  magic-hat.h  support-system.h  table-manager.cpp  table-manager.h
src/gui/: main-widget.cpp  main-widget.h  window-manager.cpp  window-manager.h
src/gui_qml/: FacultyTreeView.qml  Main.qml  PagesMenu.qml  Stats.qml  StatsPage.qml  StatusBar.qml  TablesList.qml
src/gui_qml/components/: PageButton.qml
src/gui_qml/visual-effects/: LeftTopGradient.qml
src/models/: stats-page-model.cpp  stats-page-model.h  tables-list-model.cpp  tables-list-model.h  tree-view-model.cpp  tree-view-model.h
styles/: white_style.qss
